unpackaged/main/default/objects/Journey__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <label>Qual Meeting Date</label>
    <type>Date</type>
</CustomField>