unpackaged/main/default/objects/Journey__c/fields/Meeting_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Disposition__c</fullName>
    <label>Meeting Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not Qualified - Authority</fullName>
            </value>
            <value>
                <fullName>Not Qualified - Budget</fullName>
            </value>
            <value>
                <fullName>Not Qualified - Need</fullName>
            </value>
            <value>
                <fullName>Not Qualified - Timing</fullName>
            </value>
            <value>
                <fullName>Pricing &amp; Packaging</fullName>
            </value>
            <value>
                <fullName>Product Limitation</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Self Serve Meets Needs</fullName>
            </value>
            <value>
                <fullName>Unsure What To Pick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>