unpackaged/main/default/objects/Journey__c/fields/Meeting_Source__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Source__c</fullName>
    <label>Meeting Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>