unpackaged/main/default/objects/Journey__c/fields/Moment_Description__c.field-meta.xml
<CustomField>
    <fullName>Moment_Description__c</fullName>
    <formula>Created_From_Moment__r.Moment_Description__c</formula>
    <label>Moment Description</label>
    <type>Text</type>
</CustomField>