unpackaged/main/default/objects/Journey__c/fields/Moment_Type__c.field-meta.xml
<CustomField>
    <fullName>Moment_Type__c</fullName>
    <formula>IF( ISBLANK(Created_From_Moment__c), &quot;&quot;, TEXT(Created_From_Moment__r.Moment_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moment Type</label>
    <type>Text</type>
</CustomField>