unpackaged/main/default/objects/Journey__c/fields/Moment_Type_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Moment_Type_Reporting__c</fullName>
    <formula>IF( ISBLANK(Created_From_Moment__c), &quot;&quot;, Created_From_Moment__r.Moment_Type_Reporting__c)</formula>
    <label>Moment Type (Reporting)</label>
    <type>Text</type>
</CustomField>