unpackaged/main/default/objects/Journey__c/fields/Most_Recent_Outbound_Email__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Outbound_Email__c</fullName>
    <label>Most Recent Outbound Email</label>
    <type>DateTime</type>
</CustomField>