unpackaged/main/default/objects/Journey__c/fields/Num_Outbound_Touches__c.field-meta.xml
<CustomField>
    <fullName>Num_Outbound_Touches__c</fullName>
    <description># of Outbound touches between the Journey started date, and the meeting being booked.

External Systems Utilization: Polytomic</description>
    <inlineHelpText># of Outbound touches between the Journey started date, and the meeting being booked.</inlineHelpText>
    <label># Outbound Touches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>