unpackaged/main/default/objects/Journey__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Journeys</relationshipLabel>
    <relationshipName>Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>