unpackaged/main/default/objects/Journey__c/fields/Other_Meeting_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Meeting_Details__c</fullName>
    <description>Text field used for recording additional context if the Journey Subcategory is classified as &#39;Other Meeting&#39;</description>
    <inlineHelpText>Text field used for recording additional context if the Journey Subcategory is classified as &#39;Other Meeting&#39;</inlineHelpText>
    <label>Other Meeting Details</label>
    <type>TextArea</type>
</CustomField>