unpackaged/main/default/objects/Journey__c/fields/Owner_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Is_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner: Is Active?</label>
    <type>Checkbox</type>
</CustomField>