unpackaged/main/default/objects/Journey__c/fields/Owner_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Owner_Mismatch__c</fullName>
    <description>Checked true if Journey Owner__c is not equal to OwnerId, and Owner attribution fields align with the current Journey Owner. Used for debugging.</description>
    <formula>Is_Closed__c = FALSE &amp;&amp; (
Owner__c != OwnerId ||
(Owner_Role__c != Owner__r.Role_Name__c &amp;&amp; NOT(ISBLANK(Owner__r.Role_Name__c))) ||
TEXT(Owner_Segment__c) != TEXT(Owner__r.Opportunity_Segment__c) ||
TEXT(Owner_Sourcing_Category__c) != TEXT(Owner__r.Sourcing_Category__c) ||
TEXT(Owner_Subteam__c) != TEXT(Owner__r.Subteam__c) ||
TEXT(Owner_Team__c) != TEXT(Owner__r.Team__c) ||
TEXT(Owner_Department__c) != TEXT(Owner__r.Department__c) ||
TEXT(Owner_Territory__c) != TEXT(Owner__r.Territory__c) ||
TEXT(Owner_Level__c) != TEXT(Owner__r.Level__c)
)</formula>
    <label>Owner Mismatch?</label>
    <type>Checkbox</type>
</CustomField>