unpackaged/main/default/objects/Journey__c/fields/Qual_Budget__c.field-meta.xml
<CustomField>
    <fullName>Qual_Budget__c</fullName>
    <label>Qual: Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Funded Company Budget</fullName>
            </value>
            <value>
                <fullName>Public Company Budget</fullName>
            </value>
            <value>
                <fullName>Expressed Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>