unpackaged/main/default/objects/Journey__c/fields/Qual_Champion__c.field-meta.xml
<CustomField>
    <fullName>Qual_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qual: Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Journeys (Qual: Champion)</relationshipLabel>
    <relationshipName>JourneysChampion</relationshipName>
    <type>Lookup</type>
</CustomField>