unpackaged/main/default/objects/Journey__c/fields/Qual_Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Qual_Economic_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qual: Economic Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Journeys (Qual: Economic Buyer)</relationshipLabel>
    <relationshipName>JourneysEconomicBuyer</relationshipName>
    <type>Lookup</type>
</CustomField>