unpackaged/main/default/objects/Journey__c/fields/Qual_Largest_Need_Identified__c.field-meta.xml
<CustomField>
    <fullName>Qual_Largest_Need_Identified__c</fullName>
    <label>Qual: Largest Need Identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer Productivity</fullName>
            </value>
            <value>
                <fullName>Economics of Software</fullName>
            </value>
            <value>
                <fullName>Centralized Governance</fullName>
            </value>
            <value>
                <fullName>Good Software by Default</fullName>
            </value>
            <value>
                <fullName>Business Initiative</fullName>
            </value>
            <value>
                <fullName>Scoped Use Case</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>