unpackaged/main/default/objects/Journey__c/fields/Qual_Need_Comments__c.field-meta.xml
<CustomField>
    <fullName>Qual_Need_Comments__c</fullName>
    <label>Qual: Need Comments</label>
    <type>TextArea</type>
</CustomField>