unpackaged/main/default/objects/Journey__c/fields/Qual_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Qual_Next_Step__c</fullName>
    <label>Qual: Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Discovery</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Build with them on SS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>