unpackaged/main/default/objects/Journey__c/fields/Qual_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Qual_Timeline__c</fullName>
    <label>Qual: Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent (ASAP)</fullName>
            </value>
            <value>
                <fullName>Within 3 Months</fullName>
            </value>
            <value>
                <fullName>Within 6 Months</fullName>
            </value>
            <value>
                <fullName>Within 9 Months</fullName>
            </value>
            <value>
                <fullName>Latent Demand / Exploratory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>