unpackaged/main/default/objects/Journey__c/fields/Qual_Timing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Qual_Timing_Comments__c</fullName>
    <label>Qual: Timing Comments</label>
    <type>TextArea</type>
</CustomField>