unpackaged/main/default/objects/Journey__c/fields/Qualification_Reminder_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Reminder_Sent_At__c</fullName>
    <label>Qualification Reminder Sent At</label>
    <type>Date</type>
</CustomField>