unpackaged/main/default/objects/Journey__c/fields/Re_engage_Post_Rest__c.field-meta.xml
<CustomField>
    <fullName>Re_engage_Post_Rest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-engage Post Rest?</label>
    <type>Checkbox</type>
</CustomField>