unpackaged/main/default/objects/Journey__c/fields/Rejected_At__c.field-meta.xml
<CustomField>
    <fullName>Rejected_At__c</fullName>
    <formula>IF(  TEXT(Stage__c )=&quot;Rejected&quot;,  Closed_At__c , NULL)</formula>
    <label>Rejected At</label>
    <type>DateTime</type>
</CustomField>