unpackaged/main/default/objects/Journey__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Already in sales conversation</fullName>
            </value>
            <value>
                <fullName>Bad Data - Junk Data</fullName>
            </value>
            <value>
                <fullName>Bad Data - Moved to correct account</fullName>
            </value>
            <value>
                <fullName>Bad Data - Not worthwhile target company</fullName>
            </value>
            <value>
                <fullName>Bad Data - Not worthwhile target individual</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Consultancy/Agency</fullName>
            </value>
            <value>
                <fullName>Legal - Country Restriction</fullName>
            </value>
            <value>
                <fullName>Legal - Entity Restriction</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>Retool Internal</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>