unpackaged/main/default/objects/Journey__c/fields/Reopen_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Reason__c</fullName>
    <description>Records why the Journey was reopened.</description>
    <inlineHelpText>Records why the Journey was reopened.</inlineHelpText>
    <label>Reopen Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>