unpackaged/main/default/objects/Journey__c/fields/Rest_For_Days__c.field-meta.xml
<CustomField>
    <fullName>Rest_For_Days__c</fullName>
    <label>Rest For (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
                <default>true</default>
                <label>60</label>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>