unpackaged/main/default/objects/Journey__c/fields/Rest_Until__c.field-meta.xml
<CustomField>
    <fullName>Rest_Until__c</fullName>
    <label>Rest Until</label>
    <type>DateTime</type>
</CustomField>