unpackaged/main/default/objects/Journey__c/fields/Resting_At__c.field-meta.xml
<CustomField>
    <fullName>Resting_At__c</fullName>
    <label>Resting At</label>
    <type>DateTime</type>
</CustomField>