unpackaged/main/default/objects/Journey__c/fields/SDR_Pass_Message__c.field-meta.xml
<CustomField>
    <fullName>SDR_Pass_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDR Pass Message</label>
    <referenceTo>Centro__Message_Queue__c</referenceTo>
    <relationshipLabel>Journeys</relationshipLabel>
    <relationshipName>Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>