unpackaged/main/default/objects/Journey__c/fields/Segment_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Segment_at_Creation__c</fullName>
    <label>Segment at Creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>