unpackaged/main/default/objects/Journey__c/fields/SQO_Date__c.field-meta.xml
<CustomField>
    <fullName>SQO_Date__c</fullName>
    <description>Sales Qualified At date from the related Opportunity.</description>
    <formula>Opportunity__r.Sales_Qualified_At__c</formula>
    <inlineHelpText>Sales Qualified At date from the related Opportunity.</inlineHelpText>
    <label>SQO Date</label>
    <type>Date</type>
</CustomField>