unpackaged/main/default/objects/Journey__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <defaultValue>&quot;Identified&quot;</defaultValue>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Approached</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Meeting Booked</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
            <value>
                <fullName>Resting</fullName>
                <isActive>false</isActive>
                <label>Resting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>