unpackaged/main/default/objects/Journey__c/fields/Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Stage_Duration__c</fullName>
    <formula>CASE( Stage__c ,
 &quot;Identified&quot;, TODAY() -Identified_Date__c, 
 &quot;Accepted&quot;, TODAY() -  Accepted_Date__c,
 &quot;Approached&quot;, TODAY() - DATEVALUE(Approached_At__c), 
 &quot;Engaged&quot;, TODAY() - Engaged_Date__c,
 &quot;Meeting Booked&quot;, TODAY() -  DATEVALUE(Meeting_Booked_At__c),
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>