unpackaged/main/default/objects/Journey__c/fields/Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Stage_Number__c</fullName>
    <formula>CASE(Stage__c,
&quot;Rejected&quot;,99,
&quot;Identified&quot;,1,
&quot;Accepted&quot;,2,
&quot;Approached&quot;,3,
&quot;Engaged&quot;,4,
&quot;Meeting Booked&quot;,5,
&quot;Converted&quot;,6,
&quot;Ended&quot;,98,
-1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>