unpackaged/main/default/objects/Journey__c/fields/Started_Stage__c.field-meta.xml
<CustomField>
    <fullName>Started_Stage__c</fullName>
    <formula>IF( NOT(ISBLANK( Identified_At__c )), &quot;Identified&quot;,
IF( NOT(ISBLANK( Accepted_At__c )), &quot;Accepted&quot;,
IF( NOT(ISBLANK( Approached_At__c )), &quot;Approached&quot;,
IF( NOT(ISBLANK( Engaged_At__c )), &quot;Engaged&quot;,
IF( NOT(ISBLANK(  Meeting_Booked_At__c )), &quot;Meeting Booked&quot;, &quot;ERROR&quot;
)))))</formula>
    <label>Started Stage</label>
    <type>Text</type>
</CustomField>