unpackaged/main/default/objects/Journey__c/fields/Subregion_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Subregion_at_Creation__c</fullName>
    <label>Subregion at Creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>