unpackaged/main/default/objects/Journey__c/recordTypes/Demand.recordType-meta.xml
<RecordType>
    <fullName>Demand</fullName>
    <active>true</active>
    <label>Demand</label>
</RecordType>