unpackaged/main/default/objects/Journey__c/listViews/ASE_Open_Journeys.listView-meta.xml
<ListView>
    <fullName>ASE_Open_Journeys</fullName>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>Accepted_At__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Meeting_Booked_At__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Identified,Accepted,Approached,Engaged</value>
    </filters>
    <label>ASE Open Journeys</label>
</ListView>