unpackaged/main/default/objects/Journey__c/listViews/My_Open_Journeys.listView-meta.xml
<ListView>
    <fullName>My_Open_Journeys</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Stage__c</columns>
    <columns>Most_Recent_Inbound_Email__c</columns>
    <columns>Most_Recent_Outbound_Email__c</columns>
    <columns>First_Inbound_Email__c</columns>
    <columns>First_Outbound_Email__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>My Open Journeys</label>
</ListView>