unpackaged/main/default/objects/Journey__c/listViews/SDR_My_Meeting_Booked_Journeys.listView-meta.xml
<ListView>
    <fullName>SDR_My_Meeting_Booked_Journeys</fullName>
    <columns>Close__c</columns>
    <columns>NAME</columns>
    <columns>Meeting_Disposition__c</columns>
    <columns>Meeting_Booked_At__c</columns>
    <columns>Meeting_Booked_With__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>AE_Assigned__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Journey__c.Demand</value>
    </filters>
    <filters>
        <field>Meeting_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Meeting_Disposition__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Meeting_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>[SDR] My Meeting Booked Journeys</label>
</ListView>